--- a/Cellar.Tests/Cellar.Tests.csproj
+++ b/Cellar.Tests/Cellar.Tests.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bill_Should.cs" />
+    <Compile Include="Company_Should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
