--- a/Cellar.Tests/Cellar.Tests.csproj
+++ b/Cellar.Tests/Cellar.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Bill_Should.cs" />
     <Compile Include="Company_Should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SumBills_Should.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
