--- a/Cellar.WebClient/Web.config
+++ b/Cellar.WebClient/Web.config
@@ -11,6 +11,8 @@
   </configSections>
   <connectionStrings>
     <add name="VinotecaDbContext" connectionString="Data Source=.;Initial Catalog=Vinoteca;Integrated Security=True; MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="VinotecaConnectionString" connectionString="Data Source=.;Initial Catalog=Vinoteca;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="VinotecaConnectionString2" connectionString="Data Source=.;Initial Catalog=Vinoteca;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
