--- a/Bills.MVP/packages.config
+++ b/Bills.MVP/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights" version="2.8.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
   <package id="WebFormsMvp" version="1.4.5.0" targetFramework="net461" />
 </packages>
