--- a/Cellar.Data/Cellar.Data.csproj
+++ b/Cellar.Data/Cellar.Data.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Models\Contract\ISumBills.cs" />
     <Compile Include="Models\Common\SumBills.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\EfRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
