--- a/Cellar.Data/Cellar.Data.csproj
+++ b/Cellar.Data/Cellar.Data.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Models\Common\SumBills.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EfRepository.cs" />
+    <Compile Include="Repositories\IEfRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
