--- a/Bills.MVP/Bills.MVP.csproj
+++ b/Bills.MVP/Bills.MVP.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.Entity.Design" />
