Add various packages

--- a/Cellar.Data/packages.config
+++ b/Cellar.Data/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.DependencyValidation.Analyzers" version="0.9.0" targetFramework="net461" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net461" />
+  <package id="OpenCoverToCoberturaConverter" version="0.3.4" targetFramework="net461" />
+  <package id="ReportGenerator" version="4.0.4" targetFramework="net461" />
 </packages>
