--- a/Bills.Auth/packages.config
+++ b/Bills.Auth/packages.config
@@ -11,5 +11,8 @@
   <package id="Microsoft.Owin.Security.Cookies" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net461" />
+  <package id="OpenCoverToCoberturaConverter" version="0.3.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="ReportGenerator" version="4.0.4" targetFramework="net461" />
 </packages>
