--- a/Bills.MVP/packages.config
+++ b/Bills.MVP/packages.config
@@ -3,6 +3,9 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.8.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net461" />
+  <package id="OpenCoverToCoberturaConverter" version="0.3.4" targetFramework="net461" />
+  <package id="ReportGenerator" version="4.0.4" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
   <package id="WebFormsMvp" version="1.4.5.0" targetFramework="net461" />
 </packages>
