--- a/Cellar.Tests/packages.config
+++ b/Cellar.Tests/packages.config
@@ -13,6 +13,9 @@
   <package id="NUnit.Runners" version="3.9.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.11.0" targetFramework="net461" />
   <package id="NUnitTestAdapter" version="2.1.1" targetFramework="net461" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net461" />
+  <package id="OpenCoverToCoberturaConverter" version="0.3.4" targetFramework="net461" />
+  <package id="ReportGenerator" version="4.0.4" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
