--- a/Cellar.WebClient/packages.config
+++ b/Cellar.WebClient/packages.config
@@ -60,7 +60,10 @@
   <package id="Ninject.Web" version="3.2.1.0" targetFramework="net461" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net461" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net461" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net461" />
+  <package id="OpenCoverToCoberturaConverter" version="0.3.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="ReportGenerator" version="4.0.4" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
   <package id="WebFormsMvp" version="1.4.5.0" targetFramework="net461" />
